--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group android:scaleX="0.9"
+      android:scaleY="0.9"
+      android:translateX="25.6"
+      android:translateY="25.6">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M396,256C396,283.69 387.79,310.76 372.41,333.78C357.02,356.8 335.16,374.75 309.58,385.34C283.99,395.94 255.85,398.71 228.69,393.31C201.53,387.91 176.58,374.57 157.01,354.99C137.43,335.42 124.09,310.47 118.69,283.31C113.29,256.15 116.06,228.01 126.66,202.42C137.25,176.84 155.2,154.98 178.22,139.59C201.24,124.21 228.31,116 256,116C274.39,116 292.59,119.62 309.58,126.65C326.57,133.69 342,144 355,157C368,170 378.31,185.43 385.35,202.42C392.38,219.41 396,237.61 396,256ZM337.34,204.08H315.54V191.76C315.54,190.2 314.91,188.7 313.81,187.6C312.71,186.49 311.21,185.87 309.65,185.87H177.95C176.38,185.87 174.89,186.49 173.79,187.6C172.68,188.7 172.06,190.2 172.06,191.76V301.29C172.06,304.52 172.11,308.24 172.16,309.55L172.38,310.7C173.06,314.25 174.76,317.52 177.27,320.13C179.79,322.73 183,324.56 186.52,325.37L187.87,325.69C189.46,325.78 193.38,325.87 196.62,325.87H322.98C325.74,325.87 328.47,325.32 331.02,324.27C333.56,323.21 335.87,321.67 337.82,319.72C339.77,317.77 341.31,315.45 342.37,312.91C343.42,310.36 343.96,307.63 343.96,304.88V210.68C343.95,208.93 343.25,207.25 342.01,206.02C340.77,204.78 339.09,204.09 337.34,204.08ZM292.78,220.58H195.65V234.57H292.75L292.78,220.58ZM236.96,251.24H195.66V295.58H236.97L236.96,251.24ZM291.45,281.69H252.2V295.7H291.45V281.69ZM291.49,251.17H252.23V265.16H291.49V251.17ZM329.93,218.07V304.88C329.93,306.73 329.2,308.51 327.89,309.82C326.58,311.13 324.8,311.86 322.95,311.86C321.1,311.86 319.32,311.13 318.01,309.82C316.7,308.51 315.96,306.73 315.96,304.88V218.07H329.93Z"
+        android:fillColor="#F34B6C"/>
+  </group>
 </vector>
